Fix #3043 Make the checkbox label element taller so it does not cut off the svg checkbox.

--- a/frontend/src/app/components/NewsletterForm/index.scss
+++ b/frontend/src/app/components/NewsletterForm/index.scss
@@ -30,6 +30,7 @@
 
   input[type='checkbox'] + label {
     background: url('./img/unchecked.svg') no-repeat left;
+    height: 24px;
     background-height: 21px;
     background-width: 21px;
     padding-left: 30px;
